--- a/index.html
+++ b/index.html
@@ -1,1 +1,118 @@
-Testing HaritDivyesh.github.io
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Divyesh Harit</title>
+		<meta charset="utf-8"/>
+		<meta property="fb:admins" content="608612827"/>
+		<meta property="fb:app_id" content="516285075060292"/>
+		<meta property="og:title" content="Divyesh Harit"/>
+		<meta name="description" content="Hey there, I'm Divyesh Harit. You can call me Divyesh."/>
+		<meta property="og:description" content="Hey there, I'm Divyesh Harit. You can call me Divyesh."/>
+		<meta property="og:type" content="article"/>
+		<meta property="og:image" content="http://haritdivyesh.github.io/img/me.jpg"/>
+		<meta name="author" content="Ravi Agrawal">
+		<meta property="article:author" content="https://www.facebook.com/HaritDiv"/>
+		<meta property="article:publisher" content="https://www.facebook.com/HaritDiv"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta property="og:url" content="/"/>
+		<link rel="image_src" href="./img/me.jpg">
+		<link rel="shortcut icon" href="img/favicon/favicon.png" type="image/png">
+		<link rel="author" href="https://plus.google.com/+RaviAgrawal">
+		<link rel="canonical" href="https://haritdivyesh.github.io/"/>
+		<link type="text/css" async href="css/bootstrap.min.css" rel="stylesheet">
+		<link type="text/css" async href="css/portfolio.min.css" rel="stylesheet">
+		<link type="text/css" async href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+		<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/favicon/favicon144.png">
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/favicon/favicon114.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/favicon/favicon72.png">
+		<link rel="apple-touch-icon-precomposed" href="img/favicon/favicon57.png">
+		<script src='/google_analytics_auto.js'></script>
+	</head>
+	<script type="text/javascript">
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-105596154-1']);
+	  _gaq.push(['_setDomainName', 'haritdivyesh.github.io']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+    </script>
+    <script async src='./google_analytics_auto.js'></script>
+	<script type="application/ld+json">
+	{
+	  "@context": "http://schema.org",
+	  "@type": "Person",
+	  "name": "Divyesh Harit",
+	  "url": "https://haritdivyesh.github.io",
+	  "sameAs": [
+		"https://www.facebook.com/HaritDiv",
+		"https://www.linkedin.com/in/dharit/",
+		"https://github.com/HaritDivyesh/"
+	  ]
+	}
+	</script> <script type="application/ld+json">
+	{
+	  "@context": "http://schema.org",
+	  "@type": "WebSite",
+	  "name": "Divyesh Harit",
+	  "url": "https://haritdivyesh.github.io"
+	}
+	</script>
+	<script>
+		(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id))
+			return;
+		  js = d.createElement(s);
+		  js.id = id;
+		  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=593762713978577";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
+	<script>
+    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+</script>
+<body id="page" oncontextmenu="return false">
+    <div id="fb-root"></div>
+        <a id="menu-toggle" href="#" class="btn btn-lg toggle"><i class="fa fa-bars"></i></a>
+        <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <a id="menu-close" href="#" class="btn btn-default btn-lg pull-right toggle toggle-override"><i class="fa fa-times"></i></a>
+            <li class="sidebar-brand"><a href="https://haritdivyesh.github.io">Divyesh Harit</a> </li>
+            <li><a href="#top">Home</a> </li>
+            <li><a href="#intro">Status Quo</a> </li>
+            <li><a href="#work-header">Experience</a> </li>
+            <li><a href="#projects-header">Projects</a> </li>
+            <li><a href="#about-header">About Me</a> </li>
+            <li><a href="#resume-header">Resume</a> </li>
+        </ul>
+        </div>
+        <div id="top" class="header">
+
+            <div class= "img-src" style="background-image: url("img/background-blur.jpg");"></div>
+            <div class="img-src scroll-img" style="background-image: url("img/background.jpg");"></div>
+              <div class="vert-text">
+                <img class="dp" src="./img/me.jpg">
+                <br>
+                <h1>Divyesh</h1>
+                <p class="lead"> Hey there! I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> Divyesh </a>. </br> I am an easy going person and try to make every moment count - One day at a time!</p></br> Welcome to my website.</p>
+                    <ul class="list-inline ">
+                        <li> <a title="Facebook" class="icon" href="https://www.facebook.com/HaritDiv" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a> </li>
+                        <li> <a title="LinkedIn" class="icon" href="http://www.linkedin.com/in/dharit" target="_blank"> <i class="fa fa-linkedin fa-3x"></i> </a> </li>
+                        <li> <a title="Github" class="icon" href="https://github.com/HaritDivyesh" target="_blank"> <i class="fa fa-github fa-3x"></i> </a> </li>
+                        <li> <a title="Email" class="icon" href="mailto:dharit@umass.edu" target="_blank" data-toggle="tooltip"> <i class="fa fa-envelope fa-3x"></i> </a> </li>
+                    </ul>
+                <br>
+            </div>
+        </div>
+    
+    </footer>
+    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.min.js"></script>
+</body>
+</html>
