Header & intro - audio, dp

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 		<meta property="og:url" content="/"/>
 		<link rel="image_src" href="./img/me.jpg">
 		<link rel="shortcut icon" href="img/favicon/favicon.png" type="image/png">
-		<link rel="author" href="https://plus.google.com/+RaviAgrawal">
 		<link rel="canonical" href="https://haritdivyesh.github.io/"/>
 		<link type="text/css" async href="css/bootstrap.min.css" rel="stylesheet">
 		<link type="text/css" async href="css/portfolio.min.css" rel="stylesheet">
@@ -99,7 +98,7 @@
                 <img class="dp" src="./img/me.jpg">
                 <br>
                 <h1>Divyesh</h1>
-                <p class="lead"> Hey there! I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> Divyesh </a>. </br> I am an easy going person and try to make every moment count - One day at a time!</p></br> Welcome to my website.</p>
+                <p class="lead"> Hey there! I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> Divyesh </a>. </br> I am an easy going person and try to make every moment count - One day at a time.</br> Welcome to my website!</p>
                     <ul class="list-inline ">
                         <li> <a title="Facebook" class="icon" href="https://www.facebook.com/HaritDiv" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a> </li>
                         <li> <a title="LinkedIn" class="icon" href="http://www.linkedin.com/in/dharit" target="_blank"> <i class="fa fa-linkedin fa-3x"></i> </a> </li>
