--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
         </div>
         <div id="top" class="header">
 
-            <div class= "img-src" style="background-image: url("img/background-blur.jpg");"></div>
-            <div class="img-src scroll-img" style="background-image: url("img/background.jpg");"></div>
+            <div class= "img-src" style="background-image: url("./img/background-blur.jpg");"></div>
+            <div class="img-src scroll-img" style="background-image: url("./img/background.jpg");"></div>
               <div class="vert-text">
                 <img class="dp" src="./img/me.jpg">
                 <br>
                 <h1>Divyesh</h1>
-                <p class="lead"> Hey there! I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> Divyesh </a>. </br> I am an easy going person and try to make every moment count - One day at a time.</br> Welcome to my website!</p>
+                <p class="lead"> Hey there! I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> Divyesh </a>. </br> An easy going person, I live life one day at a time and try to make every moment count.</br> Welcome to my website!</p>
                     <ul class="list-inline ">
                         <li> <a title="Facebook" class="icon" href="https://www.facebook.com/HaritDiv" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a> </li>
                         <li> <a title="LinkedIn" class="icon" href="http://www.linkedin.com/in/dharit" target="_blank"> <i class="fa fa-linkedin fa-3x"></i> </a> </li>
@@ -108,7 +108,49 @@
                 <br>
             </div>
         </div>
-    
+    	<div id="intro" class="intro">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 text-center">
+                    <h2><i class="fa fa-user fa-3x"></i></h2>
+                    <p class="lead"> I am currently a student at University of Massachusetts Amherst.<br>
+                    I'm persuing a Masters degree in Computer Science from <a href="https://www.cics.umass.edu/" target="_blank">College of Information & Computer Sciences, UMass Amherst</a> and will be graduating in December 2018. <br>
+                    My interest has primarily been Software Development and Engineering, but I have also always been enchanted by Computer Networks.<br><br>
+                    I graduated with a Bachelor of Engineering in <br>Computer Engineering from <a href="http://www.gtu.ac.in/" target="_blank">Gujarat Technological University</a> with a First Class with Distinction. <br><br> </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="work-header" class="callout work">
+            <div class="vert-text"> <h1 class="textual-content">I've gained some valuable industry experience.</h1> </div>
+    </div>
+    <div id="work" class="work">
+            <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 col-md-offset-4 text-center"> <h2><i class="fa fa-users fa-3x"></i></h2><br> </div>
+                    </div> <br>
+                    <div class="row">
+                        <div class="col-md-offset-3 col-md-6 text-center">
+                            <div class="work-item"><a href="http://statera.azurewebsites.net/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/pfs.jpg"/> </a>
+                                <h3>Project First Software<br> <small>May'17 - October'17</small></h3> <p class="lead">I worked on the UI team as a Front-End Developer for Project First, a nascent startup. I helped develop STATERA, the company's ERP software that's launching in 2018. </p>
+                            </div>
+                        </div>
+                        <div class="col-md-offset-3 col-md-6 text-center">
+                            <div class="work-item">
+                                <a href="http://www.iiitvadodara.ac.in/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/iiit.jpg"/> </a>
+                                <h3>Indian Institue of Information Technology, Vadodara<br> <small>September'15 - November'15</small></h3>
+				    <p class="lead"> I worked under Naveen Kumar, an information security professor at the University. I performed analysis of cloud computing model architectures proposed in (then) recent research papers of this area, and helped identify potential security vulnerabilities in these models.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-offset-3 col-md-6 text-center">
+                            <div class="work-item"><a href="http://www.mazconinfotech.com/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/mazcon.jpg"/> </a>
+                                <h3>Mazcon Infotech<br> <small>September'14 - April'15</small></h3> <p class="lead">I worked as a Full-Stack Developer during my undergrad final year through co-op, and we developed a web-based hospital management system for a local hospital in Ahmedabad, India that was used for over a year.</p>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+    </div>
+    <!--Insert here-->
     </footer>
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
