--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         </div>
         <div id="top" class="header">
 
-            <div class= "img-src" style="background-image: url("./img/background-blur.jpg");"></div>
-            <div class="img-src scroll-img" style="background-image: url("./img/background.jpg");"></div>
+            <div class= "img-src" style="background-image: url("img/background-blur.jpg");"></div>
+            <div class="img-src scroll-img" style="background-image: url("img/background.jpg");"></div>
               <div class="vert-text">
                 <img class="dp" src="./img/me.jpg">
                 <br>
@@ -114,7 +114,7 @@
                 <div class="col-md-6 col-md-offset-3 text-center">
                     <h2><i class="fa fa-user fa-3x"></i></h2>
                     <p class="lead"> I am currently a student at University of Massachusetts Amherst.<br>
-                    I'm persuing a Masters degree in Computer Science from <a href="https://www.cics.umass.edu/" target="_blank">College of Information & Computer Sciences, UMass Amherst</a> and will be graduating in December 2018. <br>
+                    I'm persuing a Masters degree in Computer Science from <a href="https://www.cics.umass.edu/" target="_blank">College of Information & Computer Sciences</a> and will be graduating in December 2018. <br>
                     My interest has primarily been Software Development and Engineering, but I have also always been enchanted by Computer Networks.<br><br>
                     I graduated with a Bachelor of Engineering in <br>Computer Engineering from <a href="http://www.gtu.ac.in/" target="_blank">Gujarat Technological University</a> with a First Class with Distinction. <br><br> </p>
                 </div>
