--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         </div>
         <div id="top" class="header">
 
-            <div class= "img-src"></div>
-            <div class="img-src scroll-img"></div>
+            <div class= "img-src" style="background-image: url("img/background-blur.jpg");"></div>
+            <div class="img-src scroll-img" style="background-image: url("img/background.jpg");"></div>
               <div class="vert-text">
                 <img class="dp" src="./img/me.jpg">
                 <br>
@@ -131,7 +131,7 @@
                     </div> <br>
                     <div class="row">
                         <div class="col-md-offset-3 col-md-6 text-center">
-                            <div class="work-item"><a href="http://statera.azurewebsites.net/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/pfs.jpg"/> </a>
+                            <div class="work-item"><a href="http://statera.azurewebsites.net/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/pfs_2.jpg"/> </a>
                                 <h3>Project First Software<br> <small>May'17 - October'17</small></h3> <p class="lead">I worked on the UI team as a Front-End Developer for Project First, a nascent startup. I helped develop STATERA, the company's ERP software that's launching in 2018. </p>
                             </div>
                         </div>
@@ -143,7 +143,7 @@
                             </div>
                         </div>
                         <div class="col-md-offset-3 col-md-6 text-center">
-                            <div class="work-item"><a href="http://www.mazconinfotech.com/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/mazcon.jpg"/> </a>
+                            <div class="work-item"><a href="http://www.mazconinfotech.com/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/mazcon_2.jpg"/> </a>
                                 <h3>Mazcon Infotech<br> <small>September'14 - April'15</small></h3> <p class="lead">I worked as a Full-Stack Developer during my undergrad final year through co-op, and we developed a web-based hospital management system for a local hospital in Ahmedabad, India that was used there for over a year.</p>
                             </div>
                         </div>
