--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
                     </div> <br>
                     <div class="row">
                         <div class="col-md-offset-3 col-md-6 text-center">
+                            <div class="work-item"><a href="https://www.hpe.com/us/en/home.html" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/hp.png"/> </a>
+                                <h3>Hewlett-Packard<br> <small>January'18 - May'18</small></h3> <p class="lead">I will be working on an HP-UMass Amherst collaboration project as a project lead as part of a Software Project Management course. I will lead ~10 UMass students through the creation of a product from scratch.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-offset-3 col-md-6 text-center">
                             <div class="work-item"><a href="http://statera.azurewebsites.net/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/pfs_2.jpg"/> </a>
                                 <h3>Project First Software<br> <small>May'17 - October'17</small></h3> <p class="lead">I worked on the UI team as a Front-End Developer for Project First, a nascent startup. I helped develop STATERA, the company's ERP software that's launching in 2018. </p>
                             </div>
@@ -148,6 +153,49 @@
                             </div>
                         </div>
                     </div>
+            </div>
+    </div>
+    <div id="projects-header" class="callout projects">
+        <div class="vert-text">
+            <h1>I've worked on some cool projects!</h1>
+        </div>
+    </div>
+    <div id="projects" class="projects">
+
+        <div class="row">
+            <div class="col-md-4 text-center">
+                    <div class="projects-item">
+                        <a href="https://github.com/imraviagrawal/Named_entity_recognition" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/NER.png"> </a>
+                        <h3>Named Entity Recognition<br> <small>Fall '17</small></h3>
+                        <p class="lead"> build several different Neural Network models like RNN, GRU for named entity recognition (NER) task.</p></div>
+                </div>
+               <div class="col-md-4 text-center">
+                    <div class="projects-item">
+                        <a href="https://github.com/imraviagrawal/Sentiment-Analysis" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/sentiment.png"> </a>
+                        <h3>IMDb Movie Review Sentiment Analysis<br> <small>Fall '17</small></h3>
+                        <p class="lead"> Implemented Naive Bayes classifier to predict sentiment of the movie review for the IMDB movie review dataset. </p></div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="projects-item">
+                        <a href="https://github.com/imraviagrawal/RecommenderSystem" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/netflix.png"> </a>
+                        <h3>Netflix: Prediction of Movie ratings for given user and movies <br> <small>Fall'16</small></h3>
+                        <p class="lead">Used Netflix data set for prediction of ratings, given the user and the movie. </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <div class="projects-item">
+                        <a href="https://github.com/imraviagrawal/HomedepoSearch" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/hd.jpg"> </a>
+                        <h3>Home Depot Product Search Relevance<br> <small>Fall '17</small></h3>
+                        <p class="lead"> Home Depot wanted the kagglers to predict the search relevance for the requested query using Machine Learning technique. I used word2vec's skip-gram model to show the relationship between the query and product. </p></div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="projects-item">
+                        <a href="https://github.com/imraviagrawal/Word2VecGOT" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/GOT.jpg"> </a>
+                        <h3>Semantic Similarity in Game of Thrones<br> <small>Fall '17</small></h3>
+                        <p class="lead"> I used word2vec's skip-gram model to show the relationship between different character of Game of Thrones. </p></div>
             </div>
     </div>
     <!--Insert here-->
