--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     	<div id="intro" class="intro">
         <div class="container">
             <div class="row">
-                <div class="col-md-9 col-md-offset-2 text-center">
+                <div class="col-md-9 text-center" style="width: 12.499999995%">
                     <h2><i class="fa fa-user fa-3x"></i></h2>
                     <p class="lead"> I am currently a student at University of Massachusetts Amherst.<br>
                     I'm persuing a Masters degree in Computer Science from <a href="https://www.cics.umass.edu/" target="_blank">College of Information & Computer Sciences</a> and will be graduating in December 2018. <br>
