Background image: Working

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
               <div class="vert-text">
                 <img class="dp" src="./img/me.jpg">
                 <br>
-                <h1>Divyesh</h1>
-                <p class="lead"> Hey there! I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> Divyesh </a>. </br> An easy going person, I live life one day at a time and try to make every moment count.</br> Welcome to my website!</p>
+                <h1>Divyesh Harit</h1>
+                <p class="lead"> Hey there! I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> Divyesh</a>. </br> An easy going person, I live life one day at a time and try to make every moment count.</br> Welcome to my website!</p>
                     <ul class="list-inline ">
                         <li> <a title="Facebook" class="icon" href="https://www.facebook.com/HaritDiv" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a> </li>
                         <li> <a title="LinkedIn" class="icon" href="http://www.linkedin.com/in/dharit" target="_blank"> <i class="fa fa-linkedin fa-3x"></i> </a> </li>
