--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <h2><i class="fa fa-user fa-3x"></i></h2>
                     <p class="lead"> I am currently a student at University of Massachusetts Amherst.<br>
                     I'm persuing a Masters degree in Computer Science from <a href="https://www.cics.umass.edu/" target="_blank">College of Information & Computer Sciences</a> and will be graduating in December 2018. <br>
-                    My interest has primarily been Software Development and Engineering, but I have also always been enchanted by Computer Networks.<br><br>
+                    My interest has primarily been Software Development, but I have also always been enchanted by Computer Networks.<br><br>
                     I graduated with a Bachelor of Engineering in <br>Computer Engineering from <a href="http://www.gtu.ac.in/" target="_blank">Gujarat Technological University</a> with a First Class with Distinction. <br><br> </p>
                 </div>
             </div>
@@ -132,12 +132,12 @@
                     <div class="row">
                         <div class="col-md-offset-3 col-md-6 text-center">
                             <div class="work-item"><a href="https://www.hpe.com/us/en/home.html" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/hp.png"/> </a>
-                                <h3>Hewlett-Packard<br> <small>January'18 - May'18</small></h3> <p class="lead">I will be working on an HP-UMass Amherst collaboration project as a project lead as part of a Software Project Management course. I will lead ~10 UMass students through the creation of a product from scratch.</p>
+                                <h3>Hewlett-Packard<br> <small>January '18 - May '18</small></h3> <p class="lead">I will be working on an HP-UMass Amherst collaboration project as a project lead as part of a Software Project Management course. I will lead ~10 UMass students through the creation of a product from scratch.</p>
                             </div>
                         </div>
                         <div class="col-md-offset-3 col-md-6 text-center">
                             <div class="work-item"><a href="http://statera.azurewebsites.net/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/pfs_2.jpg"/> </a>
-                                <h3>Project First Software<br> <small>May'17 - October'17</small></h3> <p class="lead">I worked on the UI team as a Front-End Developer for Project First, a nascent startup. I helped develop STATERA, the company's ERP software that's launching in 2018. </p>
+                                <h3>Project First Software<br> <small>May '17 - October '17</small></h3> <p class="lead">I worked on the UI team as a Front-End Developer for Project First, a nascent startup. I helped develop STATERA, the company's ERP software that's launching in 2018. </p>
                             </div>
                         </div>
                         <div class="col-md-offset-3 col-md-6 text-center">
@@ -149,7 +149,7 @@
                         </div>
                         <div class="col-md-offset-3 col-md-6 text-center">
                             <div class="work-item"><a href="http://www.mazconinfotech.com/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/mazcon_2.jpg"/> </a>
-                                <h3>Mazcon Infotech<br> <small>September'14 - April'15</small></h3> <p class="lead">I worked as a Full-Stack Developer during my undergrad final year through co-op, and we developed a web-based hospital management system for a local hospital in Ahmedabad, India that was used there for over a year.</p>
+                                <h3>Mazcon Infotech<br> <small>September '14 - April '15</small></h3> <p class="lead">I worked as a Full-Stack Developer during my undergrad final year through co-op, and developed a web-based hospital management system for a local hospital in Ahmedabad, India that was used there for over a year.</p>
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,58 @@
             <h1>I've worked on some cool projects!</h1>
         </div>
     </div>
-    
+    <div id="projects" class="projects">
+
+        <div class="row">
+            <div class="col-md-4 text-center">
+                    <div class="projects-item">
+                        <a href="https://github.com/HaritDivyesh/Vast-Challenge-2011" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/NER.png"> </a>
+                        <h3>VAST Challenge 2011<br> <small>Fall '17</small></h3>
+                        <p class="lead">Worked on a huge text dataset, looked for trends/patterns and built interactive visualizations to solve the mystery.</p></div>
+                </div>
+               <div class="col-md-4 text-center">
+                    <div class="projects-item">
+                        <a href="https://github.com/HaritDivyesh/Websites-vs-Webcrawler" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/sentiment.png"> </a>
+                        <h3>Websites vs. Web Crawler<br> <small>Fall '17</small></h3>
+                        <p class="lead">Queried top websites using a custom web crawler I created, as well as Selenium headless Chrome to observe performance and compare results.</p></div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="projects-item">
+                        <a href="Soccer-Results-Prediction-Machine-Learning" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/netflix.png"> </a>
+                        <h3>Predicting Soccer Results Using Machine Learning<br> <small>Spring '17</small></h3>
+                        <p class="lead">Predicted results of future seasons based on past 10 seasons' data, and identified areas that affect results the most for teams to improve.</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <div class="projects-item">
+                        <a href="https://github.com/HaritDivyesh/memcached-clone-arjun-divyesh-jayanth" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/hd.jpg"> </a>
+                        <h3>Memo: A Memcached Clone<br> <small>Spring '17</small></h3>
+                        <p class="lead">Implemented the Memcached server that includes various memory commands with LRU, Random and Landlord cache replacement policies.</p></div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="projects-item">
+                        <a href="https://github.com/HaritDivyesh/Major-Mutation-Analyzer" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/GOT.jpg"> </a>
+                        <h3>Standalone Major Mutation Analyzer<br> <small>Fall '16</small></h3>
+                        <p class="lead">Upon providing a program and test suite, it generates mutants, executes test cases, and produces detailed mutant kill summary.</p></div>
+            </div>
+            <div class="col-md-4 text-center">
+                    <div class="projects-item">
+                        <a href="https://github.com/HaritDivyesh/relay-analyzer" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/GOT.jpg"> </a>
+                        <h3>Tor Relay Security Analysis<br> <small>Fall '16</small></h3>
+                        <p class="lead">Analyzed factors crucial to security of Tor guard relays, and tried to predict chance of a relay being made guard based on its properties.</p></div> 
+            </div>
+    </div>
+    <div class="row">
+                <div class="col-md-6 col-md-offset-3 text-center">
+                    <div class="projects-item">
+                        <a href="https://github.com/HaritDivyesh/EClinic" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/hd.jpg"> </a>
+                        <h3>EClinic: A Hospital Management System<br> <small>Fall '14 - Spring '15</small></h3>
+                        <p class="lead">Worked with Mazcon Infotech to develop a system to manage operations of a local hospital. This received a perfect grade of AA (10/10) as my final year project.</p></div>
+                </div>
+</div>
     <!--Insert here-->
     </footer>
     <script src="js/jquery-1.11.0.min.js"></script>
