--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 		<link type="text/css" async href="css/bootstrap.min.css" rel="stylesheet">
 		<link type="text/css" async href="css/portfolio.min.css" rel="stylesheet">
 		<link type="text/css" async href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-		<!--[if lt IE 9]><script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/favicon/favicon144.png">
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/favicon/favicon114.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/favicon/favicon72.png">
@@ -96,10 +95,10 @@
             <div class= "img-src" style="background-image: url("img/background-blur.jpg");"></div>
             <div class="img-src scroll-img" style="background-image: url("img/background.jpg");"></div>
               <div class="vert-text">
-                <img class="dp" src="./img/me.jpg">
+                <img class="dp" src="./img/me_2.jpg">
                 <br>
                 <h1>Divyesh Harit</h1>
-                <p class="lead"> Hey there! I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> Divyesh</a>. </br> An easy going person, I live life one day at a time and try to make every moment count.</br> Welcome to my website!</p>
+                <p class="lead"> Hey there! I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> <b>Divyesh</b></a></br> An easy going person, I live life one day at a time and try to make every moment count.</br> Welcome to my website!</p>
                     <ul class="list-inline ">
                         <li> <a title="Facebook" class="icon" href="https://www.facebook.com/HaritDiv" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a> </li>
                         <li> <a title="LinkedIn" class="icon" href="http://www.linkedin.com/in/dharit" target="_blank"> <i class="fa fa-linkedin fa-3x"></i> </a> </li>
