Minor changes everywhere

--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
                     <h2><i class="fa fa-user fa-3x"></i></h2>
                     <p class="lead"> I am currently a student at University of Massachusetts Amherst.<br>
                     I'm persuing a Masters degree in Computer Science from <a href="https://www.cics.umass.edu/" target="_blank">College of Information & Computer Sciences</a> and will be graduating in December 2018. <br>
-                    My interest has primarily been Software Development, but I have also always been enchanted by Computer Networks.<br><br>
+                    My interest has primarily been Software Development, but I have also always been enchanted by Computer Networks.<br>
                     I graduated with a Bachelor of Engineering in <br>Computer Engineering from <a href="http://www.gtu.ac.in/" target="_blank">Gujarat Technological University</a> with a First Class with Distinction. <br><br> </p>
                 </div>
             </div>
         </div>
     </div>
     <div id="work-header" class="callout work">
-            <div class="vert-text"> <h1 class="textual-content">I've gained some valuable industry experience.</h1> </div>
+            <div class="vert-text"> <h1 class="textual-content">I've gained some valuable industry experience</h1> </div>
     </div>
     <div id="work" class="work">
             <div class="container">
@@ -179,7 +179,7 @@
                     <div class="projects-item">
                         <a href="Soccer-Results-Prediction-Machine-Learning" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/soccer.jpg"> </a>
                         <h3>Predicting Soccer Results Using Machine Learning<br> <small>Spring '17</small></h3>
-                        <p class="lead">Predicted results of future seasons based on past 10 seasons' data, and identified areas that affect results the most for teams to improve.</p>
+                        <p class="lead">Predicted results of future seasons based on past 10 seasons' data, and identified areas for teams to improve that affect results the most.</p>
                     </div>
                 </div>
 
@@ -195,7 +195,7 @@
                     <div class="projects-item">
                         <a href="https://github.com/HaritDivyesh/Major-Mutation-Analyzer" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/major_2.jpg"> </a>
                         <h3>Standalone Major Mutation Analyzer<br> <small>Fall '16</small></h3>
-                        <p class="lead">Upon providing a program and test suite, it generates mutants, executes test cases, and produces detailed mutant kill summary.</p></div>
+                        <p class="lead">Upon providing a program and test suite, the analyzer generates mutants, executes test cases, and produces detailed mutant kill summary.</p></div>
             </div>
             <div class="col-md-4 text-center">
                     <div class="projects-item">
@@ -223,8 +223,8 @@
 					<div class="container" align="justify" >
 						<p style="margin-bottom: 0.5em; margin-left: 350px"><b>MY CERTIFICATIONS AND ACHIEVEMENTS:</b></p>
 						<ul style="list-style-type:circle;margin-bottom: 0.5em;">
-                            <li><a style="text-decoration:none;cursor:pointer;" href="https://www.dropbox.com/s/47t0y05r3tcz06p/CCNA.jpg?dl=0">Cisco Certified Network Associate(CCNA)</a>: Routing and Switching (R/S 200-120). Score: 961/1000. June 2016 - June 2019.
-                            </li><b>Department topper:</b> Highest grades among 150 students. This was during both my 7<sup>th</sup> and 8<sup>th</sup> semesters in undergraduate studies.
+                            <li><a style="text-decoration:none;cursor:pointer;" href="https://www.dropbox.com/s/47t0y05r3tcz06p/CCNA.jpg?dl=0">Cisco Certified Network Associate(CCNA)</a>: Routing and Switching (R/S 200-120); Certificate for June 2016 - June 2019. Score: 961/1000.
+                            </li><b>Department topper:</b> Highest grades among 150 students. This was during both 7<sup>th</sup> and 8<sup>th</sup> semesters in my undergraduate studies.
                             <li>
                             </li>
                         </ul>
