--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <img class="dp" src="./img/me_2.jpg">
                 <br>
                 <h1>Divyesh Harit</h1>
-                <p class="lead"> Hey there! I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> <b>Divyesh</b></a></br> An easy going person, I live life one day at a time and try to make every moment count.</br> Welcome to my website!</p>
+                <p class="lead"><b> Hey there!</br>I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> <b>Divyesh.</b></a></br> An easy going person, I live life one day at a time and try to make every moment count.</br> Welcome to my website!</b></p>
                     <ul class="list-inline ">
                         <li> <a title="Facebook" class="icon" href="https://www.facebook.com/HaritDiv" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a> </li>
                         <li> <a title="LinkedIn" class="icon" href="http://www.linkedin.com/in/dharit" target="_blank"> <i class="fa fa-linkedin fa-3x"></i> </a> </li>
@@ -212,7 +212,7 @@
                         <p class="lead">Worked with Mazcon Infotech to develop a system to manage operations of a local hospital. This received a perfect grade of AA (10/10) as my final year project.</p></div>
                 </div>
 	</div>
-	<div id="publication-header" class="callout publications">
+	<div id="certi-achieve" class="callout publications">
         <div class="vert-text">
             <h1>A little bit of everything else..</h1>
         </div>
