--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
             <li><a href="#intro">Status Quo</a> </li>
             <li><a href="#work-header">Experience</a> </li>
             <li><a href="#projects-header">Projects</a> </li>
-            <li><a href="#certi-achieve">Miscellaneous</a> </li>
+            <li><a href="#misc-header">Miscellaneous</a> </li>
             <li><a href="#about-header">About Me</a> </li>
             <li><a href="#resume-header">Resume</a> </li>
         </ul>
         </div>
         <div id="top" class="header">
 
-            <div class= "img-src" style="background-image: url("img/background-blur.jpg");"></div>
-            <div class="img-src scroll-img" style="background-image: url("img/background.jpg");"></div>
+            <div class= "img-src" style="background-image: url("img/temp/quabbin_blur.jpg");"></div>
+            <div class="img-src scroll-img" style="background-image: url("img/temp/quabbin.jpg");"></div>
               <div class="vert-text">
-                <img class="dp" src="./img/me_2.jpg">
+                <img class="dp" src="./img/me.jpg">
                 <br>
                 <h1>Divyesh Harit</h1>
                 <p class="lead"><b> Hey there!</br>I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> <b>Divyesh.</b></a></br> An easy going person, I live life one day at a time and try to make every moment count.</br> Welcome to my website!</b></p>
@@ -212,18 +212,18 @@
                         <p class="lead">Worked with Mazcon Infotech to develop a system to manage operations of a local hospital. This received a perfect grade of AA (10/10) as my final year project.</p></div>
                 </div>
 	</div>
-	<div id="certi-achieve" class="callout publications">
+	<div id="misc-header" class="callout publications">
         <div class="vert-text">
             <h1>A little bit of everything else..</h1>
         </div>
     </div>
-    <div id="publication-header" class="publications">
+    <div id="publication-header" class="certi">
         <div class="wrapper style2" style='font-size:110%'>
 				<article class="container" id="publications" >
 					<div class="container" align="justify" >
 						<p style="margin-bottom: 0.5em; margin-left: 350px"><b>MY CERTIFICATIONS AND ACHIEVEMENTS:</b></p>
 						<ul style="list-style-type:circle;margin-bottom: 0.5em;">
-                            <li><a style="text-decoration:none;cursor:pointer;" href="https://www.dropbox.com/s/47t0y05r3tcz06p/CCNA.jpg?dl=0">Cisco Certified Network Associate(CCNA)</a>: Routing and Switching (R/S 200-120); Certificate for June 2016 - June 2019. Score: 961/1000.
+                            <li><a style="text-decoration:none;cursor:pointer;" href="./img/CCNA.jpg">Cisco Certified Network Associate(CCNA)</a>: Routing and Switching (R/S 200-120); Certificate for June 2016 - June 2019. Score: 961/1000.
                             </li><b>Department topper:</b> Highest grades among 150 students. This was during both 7<sup>th</sup> and 8<sup>th</sup> semesters in my undergraduate studies.
                             <li>
                             </li>
@@ -232,28 +232,34 @@
                 </article>
             </div>
         </div>
-	<!--<div id="about-header" class="callout about">
-        <div class="vert-text"> <h1>Finally, A little bit about me</h1></div>
+	<div id="about-header" class="callout about">
+        <div class="vert-text"> <h1>Finally, a little bit about me..</h1></div>
     </div>
     <div id="about" class="about">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-md-offset-4 text-center"> <h2><i class="fa fa-rocket fa-3x"></i></h2><br></div>
             </div>
             <div class="row">
-                <div class="col-md-4 text-center"> <h3><i class="fa fa-gavel fa-2x"></i></h3> <p class="lead"> I enjoy critically reasoning and debating controversial topics. Topics that particularly interest me are India, education, politics, technology, and economics. </p> </div>
-                <div class="col-md-4 text-center"> <h3><i class="fa fa-thumbs-up fa-2x"></i></h3> <p class="lead"> I enjoy hiking, cricket, eating and reading about <a href="https://news.ycombinator.com/news" target="_blank">tech</a>. I'm compiling a list of my favorite books, videos, articles and news sources on the internet in a list called where the knowledge is. </p> </div>
-                <div class="col-md-4 text-center"> <h3><i class="fa fa-music fa-2x"></i></h3> <p class="lead"> I love Hindi music and have a large <a href="https://open.spotify.com/user/22zzkt22jcvt3jolhtpg2q2zy/playlist/4eXVYsifPgSRN3Mo62B8Eo" target="_blank">Spotify</a> playlist going, cleverly marketed as the <a href="https://open.spotify.com/user/22zzkt22jcvt3jolhtpg2q2zy/playlist/4eXVYsifPgSRN3Mo62B8Eo" target="_blank">Best Hindi Playlist on Spotify</a>. I also like <a href="https://www.youtube.com/watch?v=CXH5yL8bDbU" target="_blank">Keane</a> and <a href="https://www.youtube.com/watch?v=c3_NntYhzV4" target="_blank">Michael Jackson</a>. When working, I listen to ambient storm sounds on <a target="_blank" href="http://www.noisli.com/get_combo_by_link/AtHoftoXLxQxq0c">Noisli</a>. </p> </div> <br>
+                <div class="col-md-4 text-center"> <h3><i class="fa fa-futbol-o fa-2x"></i></h3> <p class="lead"> I enjoy playing snooker and love sports; soccer in particular. Manchester United is my team, and it was a dream come true and one thing off the bucket list to watch them live <a href="./img/temp/MU.jpg">this summer!</a></p> </div>
+                <div class="col-md-4 text-center"> <h3><i class="fa fa-thumbs-up fa-2x"></i></h3> <p class="lead"> I love traveling and exploring new places; I've been to Boston, DC, Cape Cod, and some towns in MA so far. I love cooking, and have really improved over the last year.</p> </div>
+                <div class="col-md-4 text-center"> <h3><i class="fa fa-music fa-2x"></i></h3> <p class="lead"> I'm a big fan of rap music, and Eminem in particular. The clever wordplay and storytelling aspect of his music really appeals to me, and attending his concert is next on my bucket list!</p> </div> <br>
             </div>
         </div></div>
-    <div id="resume-header" class="callout resume"> <div class="vert-text"> <h1>And here's my resumé...</h1><br><br> <a href="resume_git.pdf" class="btn btn-lg btn-default btn-special" target="_blank"> <i class="fa fa-eye fa-2x"></i> </a> </div> </div>
+    <div id="resume-header" class="callout resume"> <div class="vert-text"> <h1 style="color: #4d4d4d">And here's my resumé..</h1><br><br> <a href="Divyesh_Harit_Resume.pdf" class="btn btn-lg btn-default btn-special" target="_blank"> <i class="fa fa-eye fa-2x" style="color: #4d4d4d"></i> </a> </div> </div>
+
+    </br><div id="thanks">
+    	<div class="container">
+            <div class="row">
+        	<div class="text-center"><h1 style="color: #4d4d4d">Thank you for visiting!</h1></div>
+        </div>
+    </div>
+</div>
     <footer id="footer" class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-md-offset-4 text-center"> <hr> <p class="lead">Copyright &copy; Ravi Agrawal 2016</p> </div>
+                <div class="col-md-4 col-md-offset-4 text-center"> <hr> <p class="lead">Copyright &copy; Divyesh Harit, 2017</p> </div>
             </div>
-        </div>-->
-    <!--Insert here-->
+        </div>
     </footer>
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
