--- a/index.html
+++ b/index.html
@@ -217,17 +217,17 @@
             <h1>A little bit of everything else..</h1>
         </div>
     </div>
-    <div id="publication-header" class="certi">
+    <div id="publication-header" class="publications">
         <div class="wrapper style2" style='font-size:110%'>
 				<article class="container" id="publications" >
-					<div class="container" align="justify" >
+					<div class="container" align="justify" ></br>
 						<p style="margin-bottom: 0.5em; margin-left: 350px"><b>MY CERTIFICATIONS AND ACHIEVEMENTS:</b></p>
 						<ul style="list-style-type:circle;margin-bottom: 0.5em;">
                             <li><a style="text-decoration:none;cursor:pointer;" href="./img/CCNA.jpg">Cisco Certified Network Associate(CCNA)</a>: Routing and Switching (R/S 200-120); Certificate for June 2016 - June 2019. Score: 961/1000.
                             </li><b>Department topper:</b> Highest grades among 150 students. This was during both 7<sup>th</sup> and 8<sup>th</sup> semesters in my undergraduate studies.
                             <li>
                             </li>
-                        </ul>
+                        </ul></br>
                     </div>
                 </article>
             </div>
