Fixed work section

--- a/index.html
+++ b/index.html
@@ -130,29 +130,33 @@
                         <div class="col-md-4 col-md-offset-4 text-center"> <h2><i class="fa fa-users fa-3x"></i></h2><br> </div>
                     </div> <br>
                     <div class="row">
-                        <div class="col-md-offset-3 col-md-6 text-center">
+                        <div class="col-md-6 text-center">
                             <div class="work-item"><a href="https://www.hpe.com/us/en/home.html" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/hp.png"/> </a>
                                 <h3>Hewlett-Packard<br> <small>January '18 - May '18</small></h3> <p class="lead">I will be working on an HP-UMass Amherst collaboration project as a project lead as part of a Software Project Management course. I will lead ~10 UMass students through the creation of a product from scratch.</p>
                             </div>
                         </div>
-                        <div class="col-md-offset-3 col-md-6 text-center">
+                        <div class="col-md-6 text-center">
                             <div class="work-item"><a href="http://statera.azurewebsites.net/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/pfs_2.jpg"/> </a>
                                 <h3>Project First Software<br> <small>May '17 - October '17</small></h3> <p class="lead">I worked on the UI team as a Front-End Developer for Project First, a nascent startup. I helped develop STATERA, the company's ERP software that's launching in 2018. </p>
                             </div>
                         </div>
-                        <div class="col-md-offset-3 col-md-6 text-center">
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 text-center">
                             <div class="work-item">
                                 <a href="http://www.iiitvadodara.ac.in/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/iiit.jpg"/> </a>
                                 <h3>Indian Institue of Information Technology, Vadodara<br> <small>September'15 - November'15</small></h3>
-				    <p class="lead"> I worked under Naveen Kumar, an information security professor at the University. I performed analysis of cloud computing model architectures proposed in (then) recent research papers of this area, and helped identify potential security vulnerabilities in these models.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-offset-3 col-md-6 text-center">
-                            <div class="work-item"><a href="http://www.mazconinfotech.com/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/mazcon_2.jpg"/> </a>
+							    <p class="lead"> I worked under Naveen Kumar, an information security professor at the University. I performed analysis of cloud computing model architectures proposed in (then) recent research papers of this area, and helped identify potential security vulnerabilities in these models.</p>
+			                 </div>
+			             </div>
+                        <div class="col-md-6 text-center">
+                            <div class="work-item">
+                            	<a href="http://www.mazconinfotech.com/" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/mazcon_2.jpg"/> </a>
                                 <h3>Mazcon Infotech<br> <small>September '14 - April '15</small></h3> <p class="lead">I worked as a Full-Stack Developer during my undergrad final year through co-op, and developed a web-based hospital management system for a local hospital in Ahmedabad, India that was used there for over a year.</p>
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
     </div>
     <div id="projects-header" class="callout projects">
