--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </div>
     </div>
     <div id="work-header" class="callout work">
-            <div class="vert-text"> <h1 class="textual-content">I've gained some valuable industry experience</h1> </div>
+            <div class="vert-text"> <h1 class="textual-content">I've gained some valuable industry experience..</h1> </div>
     </div>
     <div id="work" class="work">
             <div class="container">
@@ -161,7 +161,7 @@
     </div>
     <div id="projects-header" class="callout projects">
         <div class="vert-text">
-            <h1>I've worked on some cool projects!</h1>
+            <h1>And worked on some cool projects!</h1>
         </div>
     </div>
     <div id="projects" class="projects">
