--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <img class="dp" src="./img/me.jpg">
                 <br>
                 <h1>Divyesh Harit</h1>
-                <p class="lead"><b> Hey there!</br>I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> <b>Divyesh.</b></a></br> An easy going person, I live life one day at a time and try to make every moment count.</br> Welcome to my website!</b></p>
+                <p class="lead" style="text-shadow: 0.5px 0.5px"><b> Hey there!</br>I'm <a class="audio-clip" onclick="shortname.playclip()"><i class="fa fa-volume-up"></i> <b>Divyesh.</b></a></br> An easy going person, I live life one day at a time and try to make every moment count.</br> Welcome to my website!</b></p>
                     <ul class="list-inline ">
                         <li> <a title="Facebook" class="icon" href="https://www.facebook.com/HaritDiv" target="_blank"> <i class="fa fa-facebook fa-3x"></i> </a> </li>
                         <li> <a title="LinkedIn" class="icon" href="http://www.linkedin.com/in/dharit" target="_blank"> <i class="fa fa-linkedin fa-3x"></i> </a> </li>
@@ -245,7 +245,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 text-center"> <h3><i class="fa fa-futbol-o fa-2x"></i></h3> <p class="lead"> I enjoy playing snooker and love sports; soccer in particular. Manchester United is my team, and it was a dream come true and one thing off the bucket list to watch them live <a href="./img/temp/MU.jpg">this summer!</a></p> </div>
-                <div class="col-md-4 text-center"> <h3><i class="fa fa-thumbs-up fa-2x"></i></h3> <p class="lead"> I love traveling and exploring new places; I've been to Boston, DC, Cape Cod, and some towns in MA so far. I love cooking, and have really improved over the last year.</p> </div>
+                <div class="col-md-4 text-center"> <h3><i class="fa fa-cutlery fa-2x"></i></h3> <p class="lead"> I'm a big foodie and had to learn to cook when I came to the US last year. I've gotten quite fond of it, and have really improved over the last year. Experimenting with Indian and American recipies is fun!</p> </div>
                 <div class="col-md-4 text-center"> <h3><i class="fa fa-music fa-2x"></i></h3> <p class="lead"> I'm a big fan of rap music, and Eminem in particular. The clever wordplay and storytelling aspect of his music really appeals to me, and attending his concert is next on my bucket list!</p> </div> <br>
             </div>
         </div></div>
