--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <div class="col-md-9 text-center" style="margin-left: 12.499999995%;">
                     <h2><i class="fa fa-user fa-3x"></i></h2>
                     <p class="lead"> I am currently a student at University of Massachusetts Amherst.<br>
-                    I'm persuing a Masters degree in Computer Science from <a href="https://www.cics.umass.edu/" target="_blank">College of Information & Computer Sciences</a> and will be graduating in December 2018. <br>
+                    I'm pursuing a Masters degree in Computer Science from <a href="https://www.cics.umass.edu/" target="_blank">College of Information & Computer Sciences</a> and will be graduating in December 2018. <br>
                     My interest has primarily been Software Development, but I have also always been enchanted by Computer Networks.<br>
                     I graduated with a Bachelor of Engineering in <br>Computer Engineering from <a href="http://www.gtu.ac.in/" target="_blank">Gujarat Technological University</a> with a First Class with Distinction. <br><br> </p>
                 </div>
