--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="row">
                         <div class="col-md-6 text-center">
                             <div class="work-item"><a href="https://www.hpe.com/us/en/home.html" target="_blank"> <img class="work-icon enlarge-on-hover" src="./img/hp.png"/> </a>
-                                <h3>Hewlett-Packard<br> <small>January '18 - May '18</small></h3> <p class="lead">I will be working on an HP-UMass Amherst collaboration project as a project lead as part of a Software Project Management course. I will lead ~10 UMass students through the creation of a product from scratch.</p>
+                                <h3>Hewlett Packard Enterprise<br> <small>January '18 - May '18</small></h3> <p class="lead">I will be working on an HPE-UMass Amherst collaboration project as a project lead as part of a Software Project Management course. I will lead ~10 UMass students through the creation of a product from scratch.</p>
                             </div>
                         </div>
                         <div class="col-md-6 text-center">
