--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </div>
                <div class="col-md-4 text-center">
                     <div class="projects-item">
-                        <a href="https://github.com/HaritDivyesh/Websites-vs-Webcrawler" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/webcrawler_2.jpg"> </a>
+                        <a href="https://sites.google.com/view/web-crawler-cs653" target="_blank"> <img class="projects-icon enlarge-on-hover" src="img/webcrawler_2.jpg"> </a>
                         <h3>Websites vs. Web Crawler<br> <small>Fall '17</small></h3>
                         <p class="lead">Queried top websites using a custom web crawler I created, as well as Selenium headless Chrome to observe performance and compare results.</p></div>
                 </div>
